# FreeIR

./: .gitignore  AESTHETIC.md  CMakeLists.txt  PRD.md  README.md  prompt.md
Source/: AutoAligner.cpp  AutoAligner.h  EQProcessor.cpp  EQProcessor.h  FreeIRLookAndFeel.h  IRSlot.cpp  IRSlot.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PresetManager.cpp  PresetManager.h
Source/Components/: EQSectionComponent.cpp  EQSectionComponent.h  IRBrowserComponent.cpp  IRBrowserComponent.h  IRSlotComponent.cpp  IRSlotComponent.h  PresetBrowserComponent.cpp  PresetBrowserComponent.h  WaveformDisplay.cpp  WaveformDisplay.h
